--- a/Client/index.html
+++ b/Client/index.html
@@ -13,6 +13,8 @@
 
 <body>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+  <script type="module" src="app/main.js"></script>
 </body>
 
 </html>
