--- a/Client/index.html
+++ b/Client/index.html
@@ -13,14 +13,15 @@
 
 <body>
   <header class="container-fluid">
+
     <div class="row title-bar">
       <div class="col-12 d-flex justify-content-between align-items-center">
         <h1 class="pageTitle ">Treasure Valley Trails</h1>
         <button type="button" class="btn btn-primary addButton" data-toggle="modal" data-target="#exampleModal">
           Add New Trail
         </button>
-
       </div>
+
 
       <!-- Button trigger modal -->
 
@@ -44,9 +45,9 @@
                 <input class="form-control" size="30" type="text" name="trailName" placeholder="Enter Trail Name"
                   id="trailName" required>
 
-                <label for="location" class="col-form-label">Location*</label>
-                <input class="form-control" size="30" type="text" name="location" placeholder="Enter location"
-                  id="location" required>
+                <label for="direction" class="col-form-label">Directions*</label>
+                <textarea class="form-control" size="30" type="text" name="directions" placeholder="Enter directions"
+                  id="location" required></textarea>
                 <label for="description" class="col-form-label">Description*</label>
                 <textarea name="description" id="description" cols="55" rows="5" placeholder="Enter trail description"
                   required></textarea>
@@ -80,9 +81,136 @@
           </div>
         </div>
       </div>
-
     </div>
   </header>
+
+  <main class="container">
+    <div class="row" id="post">
+      <div class="row sorter">
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Sort By
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">Score</a>
+            <a class="dropdown-item" href="#">Most Recent</a>
+          </div>
+        </div>
+      </div>
+      <article class="col-12 color">
+        <h3 class="d-flex justify-content-between postTitle">Table Rock Trail<span>Author: Courtney</span></h3>
+        <div class="row">
+          <div class="col-4">
+            <img
+              src="https://www.alltrails.com/api/alltrails/photos/22781792/image?size=extra_large&api_key=3p0t5s6b5g4g0e8k3c1j3w7y5c3m4t8i"
+              alt="Image From Table Rock Trail">
+
+          </div>
+          <div class="col-8 color">
+            <h5>Trail Description</h5>
+            <p>Table Rock Trail is a 6.4 mile heavily trafficked out and back trail located near Pickens, South Carolina
+              that features
+              a waterfall and is rated as difficult. The trail offers a number of activity options and is best used from
+              March until
+              October. Dogs are also able to use this trail but must be kept on leash.</p>
+            <h5>Directions</h5>
+            <p>Directions from Greenville: Drive north on US 276 north until it joins SC 11. Stay on SC 11 when it
+              branches from US 276
+              and continue for approximately 7 miles to the West Gate of Table Rock State Park on the right. Enter the
+              park and follow
+              the signs to the Nature Center. After a short hike on the Carrick Creek Trail, bear to the right onto the
+              Table Rock
+              NRT.</p>
+            <h5>Difficulty Level: Expert</h5>
+            <div class="btn-group" role="group" aria-label="Basic example">
+              <button type="button" class="btn btn-secondary" onclick="app.controllers.PostController.upVote()">Up
+                Vote</button>
+              <button type="button" class="btn btn-secondary">Down Vote</button>
+            </div>
+            <button type="button" class="btn btn-primary">
+              Score <span class="badge badge-light">291</span>
+            </button>
+            <br /><br />
+            <h5 class="d-flex justify-content-between align-items-center">Comments<span><button type="button"
+                  class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2">Add Comments</button></span>
+            </h5>
+
+
+            <div class="modal" tabindex="-1" role="dialog" id="exampleModal2">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title">Add Comments</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <label for="username" class="col-form-label">Enter Username*</label>
+                    <input class="form-control" size="30" type="text" name="username" placeholder="Username"
+                      id="username" required>
+                    <label for="description" class="col-form-label">Description*</label>
+                    <textarea name="description" id="description" cols="55" rows="5" placeholder="Enter comments"
+                      required></textarea>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="comment">
+              <p>Author: Rob Schopke</p>
+              <p>Overall, it was a fantastic trail. It provided a really nice view in three different directions near
+                the summit. The
+                trail was neat because the habitat changed drastically from the start to the end. Therefore, you pick up
+                a lot of
+                different animal and plant species along the way. It’s not the easiest hike and took us longer than we
+                expected. So,
+                it’s probably a good idea to give yourself a 1-2 hour cushion to take some breaks or look at things
+                along the way.</p>
+            </div>
+            <br /><br />
+          </div>
+        </div>
+      </article>
+
+
+      <article class="col-12 color">
+        <h3 class="d-flex justify-content-between postTitle">Pinnacle Mountain Trail<span>Author: Michael</span></h3>
+        <div class="row">
+          <div class="col-4">
+            <img
+              src="https://www.alltrails.com/api/alltrails/photos/11234327/image?size=extra_large&api_key=3p0t5s6b5g4g0e8k3c1j3w7y5c3m4t8i"
+              alt="Image From Table Rock Trail">
+          </div>
+          <div class="col-8 color">
+            <h5>Trail Description</h5>
+            <p>Table Rock Trail is a 6.4 mile heavily trafficked out and back trail located near Pickens, South Carolina
+              that features
+              a waterfall and is rated as difficult. The trail offers a number of activity options and is best used from
+              March until
+              October. Dogs are also able to use this trail but must be kept on leash.</p>
+            <h5>Directions</h5>
+            <p>Directions from Greenville: Drive north on US 276 north until it joins SC 11. Stay on SC 11 when it
+              branches from US 276
+              and continue for approximately 7 miles to the West Gate of Table Rock State Park on the right. Enter the
+              park and follow
+              the signs to the Nature Center. After a short hike on the Carrick Creek Trail, bear to the right onto the
+              Table Rock
+              NRT.</p>
+            <h5>Difficulty Level: Expert</h5>
+          </div>
+        </div>
+    </div>
+
+    </article>
+    </div>
+  </main>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
