Co-authored-by: jessiempaxton <jessiempaxton@gmail.com> Co-authored-by: clhartman <courtneylarine@gmail.com Co-authored-by: clhartman <courtneylarine@gmail.com>

--- a/Client/index.html
+++ b/Client/index.html
@@ -38,12 +38,12 @@
             </div>
             <div class="modal-body">
               <form action="" onsubmit="app.controllers.postController.addPost(event)">
-                <label for="username" class="col-form-label">Enter Username*</label>
-                <input class="form-control" size="30" type="text" name="username" placeholder="Username" id="username"
+                <label for="username" class="col-form-label">Trail Name*</label>
+                <input class="form-control" size="30" type="text" name="username" placeholder="Trail Name" id="username"
                   required>
-                <label for="trailName" class="col-form-label">Trail Name*</label>
+                <!-- <label for="trailName" class="col-form-label">Trail Name*</label>
                 <input class="form-control" size="30" type="text" name="trailName" placeholder="Enter Trail Name"
-                  id="trailName" required>
+                  id="trailName" required> -->
 
                 <label for="direction" class="col-form-label">Directions*</label>
                 <textarea class="form-control" size="30" type="text" name="directions" placeholder="Enter directions"
@@ -110,46 +110,8 @@
         </div>
       </div>
       <article class="col-12 color" id="newPost">
-        <!-- <h3 class="d-flex justify-content-between postTitle">Table Rock Trail<span>Author: Courtney</span></h3>
-        <div class="row">
-          <div class="col-4">
-            <img
-              src="https://www.alltrails.com/api/alltrails/photos/22781792/image?size=extra_large&api_key=3p0t5s6b5g4g0e8k3c1j3w7y5c3m4t8i"
-              alt="Image From Table Rock Trail">
-          </div>
-          <div class="row"> -->
-        <!-- <h5>Trail Description</h5>
-            <p>Table Rock Trail is a 6.4 mile heavily trafficked out and back trail located near Pickens, South Carolina
-              that features
-              a waterfall and is rated as difficult. The trail offers a number of activity options and is best used from
-              March until
-              October. Dogs are also able to use this trail but must be kept on leash.</p>
-            <h5>Directions</h5>
-            <p>Directions from Greenville: Drive north on US 276 north until it joins SC 11. Stay on SC 11 when it
-              branches from US 276
-              and continue for approximately 7 miles to the West Gate of Table Rock State Park on the right. Enter the
-              park and follow
-              the signs to the Nature Center. After a short hike on the Carrick Creek Trail, bear to the right onto the
-              Table Rock
-              NRT.</p>
-            <h5>Difficulty Level: Expert</h5>
-            <div class="btn-group" role="group" aria-label="Basic example">
-              <button type="button" class="btn btn-secondary" onclick="app.controllers.postController.upVote(id)"
-                id="plus">Up
-                Vote</button>
-              <button type="button" class="btn btn-secondary">Down Vote</button>
-            </div>
-            <button type="button" class="btn btn-primary">
-              Score <span class="badge badge-light" id="voteCount">0</span>
-            </button>
-            <br /><br />
-            <h5 class="d-flex justify-content-between align-items-center">Comments<span><button type="button"
-                  class="btn btn-primary" data-toggle="modal" data-target="#exampleModal2">Add Comments</button></span>
-            </h5> -->
 
-
-        <div class="modal" tabindex="-1" role="dialog" id="exampleModal2">
-          <div class="modal-dialog" role="document">
+        <!-- <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title">Add Comments</h5>
@@ -185,10 +147,7 @@
             it’s probably a good idea to give yourself a 1-2 hour cushion to take some breaks or look at things
             along the way.</p>
         </div>
-        <br /><br />
-    </div>
-    </div>
-    </article>
+        <br /><br /> -->
 
 
 
