--- a/Client/index.html
+++ b/Client/index.html
@@ -93,8 +93,9 @@
             Sort By
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Score</a>
-            <a class="dropdown-item" href="#">Most Recent</a>
+            <a class="dropdown-item" href="#" onselect="app.controllers.postController.sortByScore()">Score</a>
+            <a class="dropdown-item" href="#" onselect="app.controllers.postcontroller.sortByMostRecent()">Most
+              Recent</a>
           </div>
         </div>
         <div class="dropdown">
